--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,5 +1,12 @@
 ---
 name: image
+# on:
+#   push:
+#     # Pattern matched against refs/tags
+#     tags:        
+#       - 'v*'  
+#     branches:
+#       - master
 on:
   push:
     paths-ignore:
@@ -8,6 +15,8 @@ on:
       - "docs/**"
     branches:
       - master
+
+
 
 jobs:
   deploy:
@@ -19,28 +28,21 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - name: Authenticate with ghcr
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Extract metadata (tags, labels) for Docker
-        uses: docker/metadata-action@v3
-        with:
-          flavor: |
-            latest=auto
-            prefix=
-            suffix=
-          images: |
-            ghcr.io/${{ github.repository }}
       - name: Build and push Docker images
+        id: docker_build
         uses: docker/build-push-action@v6
         with:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ github.repository }}:latest,${{ github.repository }}:test
       - name: Image Digest
         run: echo ${{ steps.docker_build.outputs.digest }}
