--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -30,6 +30,6 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository }}:latest,ghcr.io/${{ github.repository }}:${{ github.ref }}
+          tags: ghcr.io/${{ github.repository }}:latest,ghcr.io/${{ github.repository }}:${{ github.ref_name }}
       - name: Image Digest
         run: echo ${{ steps.docker_build.outputs.digest }}
